test_scores/negative_dimers/features/Q9BYE7.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9BYE7.pkl.xz